tests/tmytests/bad/two_dim_arr_field.lat
class Test {

    string[][] x;

    int[] f() {
        return (int[]) null;
    }
}

int main() {
    new int[][2];
    return 0;
}